fix: flair icons cut off

--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -119,10 +119,6 @@ img {
   border: 0;
 }
 
-svg:not(:root) {
-  overflow: hidden;
-}
-
 figure {
   margin: 1em 40px;
 }
